Fix form padding so inputs align with buttons.

--- a/umibukela/static/stylesheets/site.scss
+++ b/umibukela/static/stylesheets/site.scss
@@ -647,6 +647,9 @@ img.img-rounded-border {
 input {
 	font-family: $font-family-sans-serif-2;
 	font-weight: bold;
+	&.form-control {
+	  padding: 7px 12px 8px;
+	}
 }
 
 .input-group {
